[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tilesets/Map.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/GameMap.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://SpriteFrames/Player_Anims.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Block.png" type="Texture" id=7]

[node name="Scene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 128, 72 )
current = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 65536, 1, 0, 65540, 2, 0, 65542, 2, 0, 65551, 1, 0, 131072, 1, 0, 131082, 2, 0, 131087, 1, 0, 196608, 1, 0, 196609, 2, 0, 196615, 2, 0, 196623, 1, 0, 262144, 1, 0, 262156, 0, 0, 262159, 1, 0, 327680, 1, 0, 327682, 2, 0, 327686, 2, 0, 327689, 2, 0, 327695, 1, 0, 393216, 1, 0, 393231, 1, 0, 458752, 1, 0, 458767, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0 )
script = ExtResource( 2 )
block = ExtResource( 3 )

[node name="Spite" type="AnimatedSprite" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 16 )
frames = ExtResource( 5 )
animation = "Idle"
frame = 2
playing = true
centered = false
script = ExtResource( 6 )
map_path = NodePath("../TileMap")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 60.0
margin_top = 30.0
margin_right = 150.0
margin_bottom = 90.0
texture = ExtResource( 7 )
region_rect = Rect2( -0.532703, -1.04265, 16.6389, 17.8564 )
patch_margin_left = 5
patch_margin_top = 3
patch_margin_right = 2
patch_margin_bottom = 2
[connection signal="add_block" from="TileMap" to="Spite" method="_on_add_block"]
[connection signal="game_won" from="TileMap" to="Spite" method="_on_game_won"]
[connection signal="player_moved" from="Spite" to="TileMap" method="_on_player_moved"]
